--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://hwanggu-corgi.github.io/portfolio-dashboard/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
