--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.21.0"
+    "apollo-server": "^2.21.0",
+    "pg": "^8.5.1"
   }
 }
