--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "apollo-server": "^2.21.0",
     "pg": "^8.5.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
