--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "server for hyungmogu.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "configure": "./bin/configuredb.sh"
   },
   "author": "",
@@ -16,5 +16,11 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
