--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.21.0",
+    "express": "^4.17.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
