--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for hyungmogu.com",
   "main": "index.js",
   "scripts": {
-    "start": "index.js",
+    "start": "./index.js",
     "test": "jest",
     "configure": "./bin/configuredb.sh"
   },
